hello-rewrite/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-hello
  labels:
    app: http-hello
spec:
  ports:
    - port: 12321
      name: http-port
  selector:
    app: http-hello
